Fix a name in Footer, adjust mobile spacing

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -26,7 +26,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-rows: 80vh 1fr min-content 29rem;
+  grid-template-rows: 80vh 1fr min-content 31rem;
   grid-template-columns:
     [full-start] 13vw [content-start] repeat(3, [col-start] 1fr [col-end])
     [content-end] 13vw [full-end];
@@ -35,6 +35,6 @@ body {
   color: $color-text;
 
   @include responsive(bp800) {
-    grid-template-rows: 75vh 1fr min-content 33vh;
+    grid-template-rows: 70vh 1fr min-content minmax(min-content, 33vh);
   }
 }
