--- a/sass/layout/_navbar.scss
+++ b/sass/layout/_navbar.scss
@@ -7,7 +7,7 @@
   z-index: 20;
 
   @include responsive(bp800) {
-    left: -3.6rem;
+    left: -3.9rem;
   }
 
   &__list {
